@@ -131,7 +131,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   edit, via the parameter 'bot'. (Default: '1')
 * (bug 12536) User should be able to get MediaWiki version from any page
 * (bug 12622) A JavaScript constant to declare whether api.php is available
- 
+* Add caching to the AJAX search
+
 
 === Bug fixes in 1.12 ===
 
